//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  department String [not null]
  jobTitle String [not null]
  profileImage String
  role Role [not null, default: 'USER']
  statusAccount StatusAccount [not null, default: 'INATIVE']
  warehousesUser associate_user_wharehouse [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table AddressWarehouse {
  id String [pk]
  address String [unique, not null]
  statusAddress StatusAddress [not null, default: 'NOTAVAILABLE']
  product products
  productId String [unique]
  Warehouse warehouses [not null]
  warehouseId String [not null]
}

Table invoices {
  id String [pk]
  products product_quantities [not null]
  totalItens Float
  type TypeInvoice [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table product_quantities {
  id String [pk]
  product products [not null]
  productId String [not null]
  quantity Int [not null]
  Invoice invoices
  invoiceId String
}

Table warehouses {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  code Int [unique, not null]
  telephone String [unique, not null]
  totalItems Int [not null]
  currentInventoryValue Float [not null]
  minInventoryThreshold Int [not null]
  maxInventoryThreshold Int [not null]
  addressWarehouses AddressWarehouse [not null]
  usersWarehouse associate_user_wharehouse [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Product products
  productId String
  AssociateWarehouseProduct AssociateWarehouseProduct [not null]
}

Table associate_user_wharehouse {
  id String [pk]
  user users [not null]
  userId String [not null]
  warehouse warehouses [not null]
  warehouseId String [not null]
}

Table products {
  id String [pk]
  name String [not null]
  unit_of_measurement String [not null]
  description String
  price Float [not null]
  weight Float [not null]
  dimensions String [not null]
  brand String [not null]
  sku String [unique]
  barCode String [unique]
  ni Int [unique, not null]
  address String [unique]
  currentStockQuantity Int [not null]
  minimumStockLevel Int [not null]
  reorderQuantity Int [not null]
  imageUrl String
  warehouses warehouses [not null]
  category category_products [not null]
  categoryProductId String [not null]
  ProductSupplier associate_product_supplier [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  AssociateWarehouseProduct AssociateWarehouseProduct [not null]
  ProductQuantity product_quantities [not null]
  AddressWarehouse AddressWarehouse
}

Table AssociateWarehouseProduct {
  id String [pk]
  warehouse warehouses [not null]
  product products [not null]
  warehouseId String [not null]
  productId String [not null]
}

Table suppliers {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  telephone String [not null]
  cnpj String [unique, not null]
  is_active Boolean [default: true]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  ProductSupplier associate_product_supplier [not null]
}

Table associate_product_supplier {
  id String [pk]
  productId String [not null]
  products products [not null]
  supplierId String [not null]
  supplier suppliers [not null]
}

Table category_products {
  id String [pk]
  name String [not null]
  slug String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Products products [not null]
}

Enum StatusWarehouse {
  EMPTY
  FULL
  REPLACEMENT
}

Enum Role {
  USER
  ADMIN
}

Enum StatusAccount {
  ACTIVE
  INATIVE
}

Enum TypeInvoice {
  INPUT
  OUTPUT
}

Enum StatusAddress {
  AVAILABLE
  NOTAVAILABLE
}

Ref: AddressWarehouse.productId - products.id

Ref: AddressWarehouse.warehouseId > warehouses.id

Ref: product_quantities.productId > products.id

Ref: product_quantities.invoiceId > invoices.id

Ref: warehouses.productId > products.id

Ref: associate_user_wharehouse.userId > users.id

Ref: associate_user_wharehouse.warehouseId > warehouses.id

Ref: products.categoryProductId > category_products.id

Ref: AssociateWarehouseProduct.warehouseId > warehouses.id

Ref: AssociateWarehouseProduct.productId > products.id

Ref: associate_product_supplier.productId > products.id

Ref: associate_product_supplier.supplierId > suppliers.id